# Gector2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GectorPlan.md  README.md
.github/workflows/: ci.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/tests/: Makefile  test_arena  test_arena[1]_include.cmake  test_arena[1]_tests.cmake  test_brep_io  test_brep_io[1]_include.cmake  test_brep_io[1]_tests.cmake  test_brep_query  test_brep_query[1]_include.cmake  test_brep_query[1]_tests.cmake  test_brep_topology  test_brep_topology[1]_include.cmake  test_brep_topology[1]_tests.cmake  test_brep_validator  test_brep_validator[1]_include.cmake  test_brep_validator[1]_tests.cmake  test_builders_5_1  test_builders_5_1[1]_include.cmake  test_builders_5_1[1]_tests.cmake  test_builders_5_2  test_builders_5_2[1]_include.cmake  test_builders_5_2[1]_tests.cmake  test_curve_analytic  test_curve_analytic[1]_include.cmake  test_curve_analytic[1]_tests.cmake  test_curve_bspline  test_curve_bspline[1]_include.cmake  test_curve_bspline[1]_tests.cmake  test_curve_iface  test_curve_iface[1]_include.cmake  test_curve_iface[1]_tests.cmake  test_curve_utils  test_curve_utils[1]_include.cmake  test_curve_utils[1]_tests.cmake  test_entityid  test_entityid[1]_include.cmake  test_entityid[1]_tests.cmake  test_extrusion  test_extrusion[1]_include.cmake  test_extrusion[1]_tests.cmake  (+60 more)
build_test/: Makefile
build_test/Testing/Temporary/: CTestCostData.txt
build_test/tests/: Makefile  test_arena  test_arena[1]_include.cmake  test_arena[1]_tests.cmake  test_curve_analytic  test_curve_analytic[1]_include.cmake  test_curve_analytic[1]_tests.cmake  test_curve_bspline  test_curve_bspline[1]_include.cmake  test_curve_bspline[1]_tests.cmake  test_curve_iface  test_curve_iface[1]_include.cmake  test_curve_iface[1]_tests.cmake  test_curve_utils  test_curve_utils[1]_include.cmake  test_curve_utils[1]_tests.cmake  test_entityid  test_entityid[1]_include.cmake  test_entityid[1]_tests.cmake  test_handle  test_handle[1]_include.cmake  test_handle[1]_tests.cmake  test_interval  test_interval[1]_include.cmake  test_interval[1]_tests.cmake  test_log  test_log[1]_include.cmake  test_log[1]_tests.cmake  test_mat2x2  test_mat2x2[1]_include.cmake  test_mat2x2[1]_tests.cmake  test_mat3x3  test_mat3x3[1]_include.cmake  test_mat3x3[1]_tests.cmake  test_mat4x4  test_mat4x4[1]_include.cmake  test_mat4x4[1]_tests.cmake  test_quaternion  test_quaternion[1]_include.cmake  test_quaternion[1]_tests.cmake  (+33 more)
build_verify/: Makefile
build_verify/Testing/Temporary/: CTestCostData.txt
build_verify/tests/: Makefile  test_arena  test_arena[1]_include.cmake  test_arena[1]_tests.cmake  test_curve_analytic  test_curve_analytic[1]_include.cmake  test_curve_analytic[1]_tests.cmake  test_curve_bspline  test_curve_bspline[1]_include.cmake  test_curve_bspline[1]_tests.cmake  test_curve_iface  test_curve_iface[1]_include.cmake  test_curve_iface[1]_tests.cmake  test_curve_utils  test_curve_utils[1]_include.cmake  test_curve_utils[1]_tests.cmake  test_entityid  test_entityid[1]_include.cmake  test_entityid[1]_tests.cmake  test_handle  test_handle[1]_include.cmake  test_handle[1]_tests.cmake  test_interval  test_interval[1]_include.cmake  test_interval[1]_tests.cmake  test_log  test_log[1]_include.cmake  test_log[1]_tests.cmake  test_mat2x2  test_mat2x2[1]_include.cmake  test_mat2x2[1]_tests.cmake  test_mat3x3  test_mat3x3[1]_include.cmake  test_mat3x3[1]_tests.cmake  test_mat4x4  test_mat4x4[1]_include.cmake  test_mat4x4[1]_tests.cmake  test_quaternion  test_quaternion[1]_include.cmake  test_quaternion[1]_tests.cmake  (+33 more)
kernel/include/gk/: Arena.h  EntityId.h  Error.h  Gector.h  Handle.h  Log.h  Result.h  Tolerances.h
kernel/include/gk/boolean/: BooleanOps.h  FaceFaceIntersect.h
kernel/include/gk/brep/: BRep.h  BRepIO.h  BRepQuery.h  BRepValidator.h  Body.h  CoEdge.h  Edge.h  Face.h  Lump.h  Shell.h  StepExport.h  StepReader.h  StepWriter.h  TopoTypes.h  Vertex.h  Wire.h
kernel/include/gk/builders/: Builders.h  MoreBuilders.h  PrimitiveBuilders.h
kernel/include/gk/curve/: BSplineCurve.h  Circle.h  Conic.h  CurveUtils.h  Curves.h  Ellipse.h  ICurve.h  Line.h  NURBSCurve.h
kernel/include/gk/math/: Interval.h  Mat2x2.h  Mat3x3.h  Mat4x4.h  Quaternion.h  Tolerances.h  Vec2.h  Vec3.h  Vec4.h
kernel/include/gk/sketch/: Delaunay2D.h  SketchMesh.h  SketchRegion.h
kernel/include/gk/surface/: BSplineSurface.h  Cone.h  Cylinder.h  DiscSurface.h  ISurface.h  NURBSSurface.h  Plane.h  RuledSurface.h  Sphere.h  SurfaceUtils.h  Surfaces.h  Torus.h
step_examples/: object.step  test_model.step
tests/: CMakeLists.txt  GkTest.h  ObjWriter.h  StepWriter.h  SvgWriter.h  test_arena.cpp  test_boolean_6_2.cpp  test_boolean_6_3.cpp  test_boolean_6_4.cpp  test_boolean_6_5.cpp  test_brep_io.cpp  test_brep_query.cpp  test_brep_topology.cpp  test_brep_validator.cpp  test_builders_5_1.cpp  test_builders_5_2.cpp  test_builders_5_4.cpp  test_curve_analytic.cpp  test_curve_bspline.cpp  test_curve_iface.cpp  test_curve_utils.cpp  test_entityid.cpp  test_extrusion.cpp  test_handle.cpp  test_intersection_6_1.cpp  test_interval.cpp  test_log.cpp  test_mat2x2.cpp  test_mat3x3.cpp  test_mat4x4.cpp  test_quaternion.cpp  test_result.cpp  test_sketch.cpp  test_smoke.cpp  test_step_models.cpp  test_step_reader.cpp  test_step_writer.cpp  test_surface_analytic.cpp  test_surface_bspline.cpp  test_surface_nurbs.cpp  (+6 more)
